其他模型修复编译问题